interoperate with other opennap servers < 0.33, but will use less
bandwidth for server->server links

Added new config variable `search_timeout' which controls how long pending
searches will be considered valid before timing out.

Added new config variable `stats_port' to make the port 8889 stats
configurable since napigator now supports alternate ports.

[opennap 0.35]

added `max_clones' configuration variable to control how many clients may
log into the server from the same ip address.

[opennap 0.34]

added channel mode command (/msg chanserv mode <channel> [mode]) where
mode is one or more of
	+MODERATED	only mods, ops and voiced users can talk
	+INVITE		non-ops/mods must be invited to /join
	+TOPIC		any user in the channel can change the topic
	+PRIVATE	channel does not show up in channel list

added channel voice command: /msg chanserv voice <channel> [user [user ...]]
allows a user to talk in a moderated channel

added channel muzzle command: /msg chanserv muzzle <channel> <user> ["reason"]
muzzles a user in the specified channel only

added channel invite command: /msg chanserv invite <channel> <user>
to allow a user to join a +invite channel

added channel wallop command: /msg chanserv wallop <channel> <text>
to send a message to all ops/mods+ in the specified channel

notifications about changes in channels are now only sent to the ops/mods+ in
that channel rather than to all mods+

removed +TOPIC and +CHANNEL user modes

max nickname length set to 19 to avoid a bug in the windows napster client

[opennap 0.32]

fixes bug in channel_op() which allowed any user to gain channel operator
status on any channel

[opennap 0.31]

added new flags 'z' and 'c' to global user list to display all muzzled and
cloaked users, respetively.

the server config command will now dump all variables if none is specified

added the number of registered user to the stats dump

motd is now stored in memory upon startup to avoid reading it from disk
every time a login occurs
